fix(frontend): resolve image overflow

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -27,3 +27,10 @@ a {
     color-scheme: dark;
   }
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+  padding: 0;
+  margin: 0;
+}
